--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,7 +2,8 @@
     display: flex;
     background-color: #daeef6;
     justify-content: space-around;
-    padding: 10px 0 ;
+    padding: 10px 0;
+
 }
 
 .img{
@@ -67,6 +68,12 @@ a{
 
 .align{
     text-align: center;
+}
+
+.form{
+    align-items: center;
+    width: 300px;
+    border-radius: 50px;
 }
 
 
