admin article, entity manager

--- a/templates/search.html.twig
+++ b/templates/search.html.twig
@@ -6,15 +6,21 @@
 
 {% block main %}
     <article class="article">
-        {% for artikl in artiklos %}
-            <div class="container_article">
-                <a href="{{ path("display_artikl",{'id' : artikl.id}) }}">
-                    <img src="{{ artikl.image }}" alt="{{ artikl.title }}" class="image" >
-                    <h2>{{ artikl.title }}</h2>
-                    <p>{{ artikl.content }}</p>
-                    <span>{{ artikl.createdAt |date("F jS \\a\\t g:ia") }}</span>
-                </a>
+        {% if artiklos | length > 0 %}
+            {% for artikl in artiklos %}
+                <div class="container_article">
+                    <a href="{{ path("display_artikl",{'id' : artikl.id}) }}">
+                        <img src="{{ artikl.image }}" alt="{{ artikl.title }}" class="image" >
+                        <h2>{{ artikl.title }}</h2>
+                        <p>{{ artikl.content }}</p>
+                        <span>{{ artikl.createdAt |date("F jS \\a\\t g:ia") }}</span>
+                    </a>
+                </div>
+            {% endfor %}
+        {% else %}
+            <div class="recherche_null">
+                <p> il y a pas article correspondant a la rechcerche</p>
             </div>
-        {% endfor %}
+        {% endif %}
     </article>
 {% endblock main %}
