--- a/templates/base_artiklos.html.twig
+++ b/templates/base_artiklos.html.twig
@@ -26,6 +26,17 @@
 </header>
 {# ici je change block  main qui je rappelle ou je repli par autre page quelle demande block main  #}
 <main>
+    {# je cree boucle pour ma message flash quelle je trouve dans admin/ArticleController
+    app c'est un variable qui est cree deja dans twig , flash car j'appelle methode addFlash dans ArticleController ( vers function delete)
+    success c'est le type quelle je donne
+    https://symfonycasts.com/screencast/symfony-forms/flash-messages#}
+        {% for message in app.flashes('success') %}
+            <div class="flash-message">
+                <h2>{{ message }}</h2>
+            </div>
+        {% endfor %}
+
+
     {% block main %}{% endblock %}
 
 </main>
