--- a/templates/articles.html.twig
+++ b/templates/articles.html.twig
@@ -7,6 +7,7 @@
 {% block main %}
     <article class="article">
         {% for article in articles %}
+            <h2>{{ article.category.title }}</h2>
                 <div class="container_article">
                     <a href="{{ path("display_article",{'id' : article.id}) }}">
                     <img src="{{ article.image }}" alt="article" >
