--- a/templates/admin_insert_articles.html.twig
+++ b/templates/admin_insert_articles.html.twig
@@ -3,5 +3,6 @@
 
 
 {% block main %}
-    <p>ton article etait bien enregistre</p>
+{# je utilise form ( je pense un methode relier avec twig et symfo et je mettre dans parantheze() render de article>Controler #}
+    {{form(formArticleView)}}
 {% endblock main %}
