--- a/templates/categories.html.twig
+++ b/templates/categories.html.twig
@@ -9,7 +9,9 @@
               <h2>{{ category.title}}</h2>
                {# je fais autre boucle dans boucle pour appelle article quelle sont jointe avec category #}
                {% for article in category.articles %}
-                   <p>{{ article.title }}</p>
+                   <a href="{{ path("display_artikl",{'id' : article.id}) }}">
+                       <p>{{ article.title }}</p>
+                   </a>
                {% endfor %}
             {% endfor %}
         </div>
