--- a/templates/admin_insert_categories.html.twig
+++ b/templates/admin_insert_categories.html.twig
@@ -4,10 +4,6 @@
 {% block main %}
 
     {{form_start(formCategoryView)}}
-        <div>
-            {{ form_errors(formCategoryView) }}
-        </div>
-
 
         <div class="container-fluid ">
             <div class="row justify-content-around mb-5 pt-5 ">
@@ -18,6 +14,10 @@
                         </div>
                     </div>
                     <div class="row">
+                        {# form_errors me sort les error fait par formulaire #}
+                        <div class="bg-danger text-white text-center ">
+                            {{ form_errors(formCategoryView.title) }}
+                        </div>
                         <div class="border border-4 border border-danger p-0 ">
                             {{ form_widget(formCategoryView.title, {'attr': {'class': 'full-width','placeholder': 'Faut mettre jolie titre!!'}}) }}
                         </div>
@@ -25,6 +25,7 @@
                 </div>
                 <div class="col-5">
                     <div class="row ">
+                        {{ form_errors(formCategoryView.description) }}
                         <div class="fw-bold text-center fs-3 col-10">
                             <h3>{{ form_label(formCategoryView.description) }}</h3>
                         </div>
