--- a/templates/admin_insert_categories.html.twig
+++ b/templates/admin_insert_categories.html.twig
@@ -65,6 +65,20 @@
                     </div>
                 </div>
             </div>
+            <div class="row justify-content-around mb-5">
+                <div class="col-5">
+                    <div class="row">
+                        <div class="fw-bold text-center fs-3 col-10">
+                            <h3>{{ form_label(formCategoryView.image) }}</h3>
+                        </div>
+                    </div>
+                    <div class="row ">
+                        <div class=" ">
+                            {{ form_widget(formCategoryView.image)  }}
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="submit-form-article d-flex justify-content-center pb-5">
                 {{ form_widget(formCategoryView.submit) }}
